fixes arrow-up is visible through sticky thead

--- a/src/Views/styles/swgoh.css
+++ b/src/Views/styles/swgoh.css
@@ -3,10 +3,14 @@ body {
     font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-thead th {
+.table-striped thead th {
     position: sticky;
     top: 39px;
     background-color: rgb(221, 221, 221);
+}
+
+.oi {
+    position: static;
 }
 
 .bg-green {
